data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4427.wast
;; 6. **Incorrect Handling of Funcref Misalignment Test**:    - **Description**: Create a test where the table is incorrectly typed or indexed not solely with `funcref` values.    - **Constraint**: Ensures proper trapping when non-`funcref` entries are accessed.    - **CFG Relation**: Ensures CFG invalid paths due to type misalignment in table entries are correctly trapped.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 anyref)
    (func $misaligned-call (call_indirect (type 0) (i32.const 0)))
  )
  "type mismatch"
)